# ChillPill-Shell

./: .Weather.qml  Bandwidth.qml  Battery.qml  Brightness.qml  CMakeLists.txt  CalendarBox.qml  CcButtons.qml  Cliphist.qml  Clock.qml  Config.qml  CountdownModule.qml  Datetime.qml  IpStatus.qml  MediaPlayer.qml  Mpris.qml  Network.qml  NotificationModule.qml  NotificationPopup.qml  OsdBar.qml  README.md  Theme.qml  Volume.qml  Weather.qml  WeatherModule.qml  WeatherPopup.qml  WifiPanel.qml  Workspaces.qml  chillpill-shell.service  chillpill.desktop  config.jsonc  install.sh  launcher.sh  shell.qml  uninstall.sh
qml/: Brightness.qml  CcButtons.qml  Cliphist.qml  Config.qml  CountdownModule.qml  Datetime.qml  FullscreenOsd.qml  IpStatus.qml  Mpris.qml  Network.qml  NotificationModule.qml  OsdBar.qml  Theme.qml  Volume.qml  WeatherIndicator.qml  WifiPanel.qml  Workspaces.qml  shell.qml
scripts/: cliphist-img.sh
